# autogoals

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  TUI_TEST_VERIFICATION.md  goals.yaml  package-lock.json  package.json  tsconfig.json
.claude-plugin/: plugin.json
commands/: autogoals:pause.md  autogoals:resume.md  autogoals:status.md  create.md  goals-start.md  pause.md  resume.md  start.md  status.md
docker/: .dockerignore  Dockerfile  README.md  build.sh
docs/: TEST_RESULTS.md
docs/plans/: 2025-12-07-autogoals-design.md  2025-12-07-autogoals-implementation.md  2025-12-07-autogoals-runner-design.md  2025-12-07-docker-containers-design.md  2025-12-07-interactive-tui-design.md  2025-12-07-interactive-tui-implementation.md
examples/: README.md
examples/1-hello-world/: README.md  goals.yaml
examples/2-multi-goal/: README.md  goals.yaml
examples/3-all-completed/: README.md  goals.yaml
examples/4-mixed-status/: README.md  goals.yaml
examples/docker-test/: .gitignore  TEST_RESULTS.md  goals.yaml
examples/fullstack-app/: README.md  goals.yaml
hooks/: hooks.json  session-start.sh
lib/: git-operations.js  goals-core.js
scripts/: orchestrator.js
skills/goal-creator/: SKILL.md
skills/goal-execution/: SKILL.md
skills/goal-orchestrator/: SKILL.md
skills/goal-planning/: SKILL.md
skills/goal-verification/: SKILL.md
src/: agent.ts  goals.ts  index.ts  main.rs  types.ts
src/docker/: ContainerManager.ts  DockerClient.ts  EnvLoader.ts  types.ts
src/session/: AgentRunner.ts  LogBuffer.ts  SessionManager.ts
src/tui/: index.tsx  (+3 more)
(+4 files in other folders)
