[package]
name = "autogoals"
version = "0.1.0"
edition = "2021"
authors = ["AutoGoals Contributors"]
description = "Autonomous coding agent that orchestrates Claude Code sessions"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
